--- a/style.css
+++ b/style.css
@@ -1,41 +1,3 @@
-/* vietnamese */
-@font-face {
-  font-family: "Kanit";
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(
-      https://fonts.gstatic.com/s/kanit/v7/nKKU-Go6G5tXcr5mOBWoVaFrNlJzIu4.woff2
-    )format("woff2");
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
-    U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-}
-/* latin-ext */
-@font-face {
-  font-family: "Kanit";
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(
-      https://fonts.gstatic.com/s/kanit/v7/nKKU-Go6G5tXcr5mOBWpVaFrNlJzIu4.woff2
-    )format("woff2");
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: "Kanit";
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(
-      https://fonts.gstatic.com/s/kanit/v7/nKKU-Go6G5tXcr5mOBWnVaFrNlJz.woff2
-    )format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
-    U+FEFF, U+FFFD;
-}
-
 #card {
   width: 1004px;
   height: 638px;
@@ -51,7 +13,7 @@
   background: black;
   width: 100%;
   height: 100%;
-  opacity: 0.25;
+  opacity: 0.1;
 }
 
 #logo {
@@ -73,16 +35,15 @@
   margin: 0;
   bottom: 15px;
   left: 35px;
-  font-family: "Verdana", sans-serif;
-  font-size: 100px;
-  font-weight: 500;
+  font-family: "Tahoma", sans-serif;
+  font-size: 95px;
+  font-weight: 600;
   color: white;
   -webkit-text-stroke: 2px black;
 }
 
 .hack {
-  -webkit-text-stroke: none;
-  color: transparent;
+  visibility: hidden;
 }
 
 #form-card {
