--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 :root {
   --padding: 60px;
+  font-family: "Tahoma", sans-serif;
+}
+
+h5 {
+  margin-bottom: 5px;
 }
 
 #card {
@@ -56,13 +61,14 @@
 
 #background-select {
   display: flex;
-  margin: 10px 0 20px;
+  flex-wrap: wrap;
+  margin: 10px 0;
 }
 
 #background-select img {
   width: 200px;
   border: 1px solid black;
-  margin-right: 10px;
+  margin: 0 8px 8px 0;
   opacity: 0.75;
   cursor: pointer;
 }
