🏄🏪 Checkpoint ./font.css:311760/39610 ./script.js:311760/16860 ./style.css:311760/2274 ./index.html:311760/18715

--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ h5 {
   margin: 0;
   bottom: calc(var(--padding) - 10px);
   left: calc(var(--padding) + 5px);
-  font-family: "Tahoma", sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 85px;
-  font-weight: 600;
+  font-weight: 500;
   color: white;
   -webkit-text-stroke: 2px black;
 }
